added custom loading state example

--- a/Project/Project/Project.vcxproj.filters
+++ b/Project/Project/Project.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="InstancedObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CustomLoadingState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainMenu.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InstancedObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CustomLoadingState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
