고정소수점 물리엔진/그리드/레벨 저장 기능 추가
Fixed64를 32.32 고정소수점 Fix64로 대체하고, 그리드 시스템을 클래스화하여 월드 좌표 변환 및 셀 관리 기능을 강화했습니다. 신규 물리엔진(PhysicsSolver)과 엔티티 특성 관리, 중력/푸시/충돌 처리 로직을 추가했습니다. 레벨 저장/불러오기(Serializer) 기능을 도입하여 맵과 엔티티 정보를 파일로 관리할 수 있게 했습니다. 관련 헤더 파일을 프로젝트에 포함시켰습니다.

--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -249,6 +249,8 @@
   <ItemGroup>
     <ClInclude Include="BackgroundObject.h" />
     <ClInclude Include="Core\Grid.h" />
+    <ClInclude Include="Core\LevelSerializer.h" />
+    <ClInclude Include="Core\Physics.h" />
     <ClInclude Include="CustomLoadingState.h" />
     <ClInclude Include="FlagObject.h" />
     <ClInclude Include="InstancedObject.h" />
