--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -233,6 +233,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BackgroundObject.cpp" />
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="CustomLoadingState.cpp" />
     <ClCompile Include="FlagObject.cpp" />
     <ClCompile Include="InstancedObject.cpp" />
@@ -240,6 +241,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="TileManager.cpp" />
     <ClCompile Include="TileObject.cpp" />
     <ClCompile Include="Tutorial.cpp" />
   </ItemGroup>
@@ -250,12 +252,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackgroundObject.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="CustomLoadingState.h" />
     <ClInclude Include="FlagObject.h" />
     <ClInclude Include="InstancedObject.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="TileManager.h" />
     <ClInclude Include="TileObject.h" />
     <ClInclude Include="Tutorial.h" />
   </ItemGroup>
